<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.sistemainfologin.LoginActivity">

        <ImageView
            android:layout_width="249dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:src="@mipmap/logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#EEE"
            android:text="@string/forgot_login_info" />


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:textColor="@color/colorSecondary"
            android:textColorHint="#CCC"
            android:hint="@string/email"/>


        <Button
            android:id="@+id/btn_recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/recover_account"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"/>


    </LinearLayout>

</ScrollView>